[package]
name = "fastmunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastmunk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
numpy = "0.17.2"
ndarray = "0.15.6"
fixedbitset = "0.4.2"
ordered-float = "3.4.0"
